--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include LICENSE
 include AUTHORS
+include README.rst
 recursive-include formwizard/templates *.html
 recursive-include formwizard/tests/wizardtests/templates *.html
 recursive-include docs *.rst
