Update tox.ini to new syntax

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py27x_dj, py27x_dj14x, py27x_dj13x,
-    py26x_dj, py26x_dj14x, py26x_dj13x
+    py27-dj, py27-dj14, py27-dj13,
+    py26-dj, py26-dj14, py26-dj13
 
 [testenv]
 commands =
@@ -13,57 +13,56 @@ commands =
 testing =
     coverage
     unittest-xml-reporting
-    git+git://github.com/dag/attest
+    https://github.com/dag/attest/tarball/master
 
 [django]
 1.3.x  = Django>=1.3,<1.4
 1.4.x  = Django>=1.4,<1.5
-latest = git+git://github.com/django/django
+latest = https://github.com/django/django/tarball/master
 
 
 ; -- python 2.7.x -------------------------------------------------------------
 
-[testenv:py27x_dj]
+[testenv:py27-dj]
 basepython = python2.7
 deps =
-    {tools$testing}
-    {django$latest}
+    {[tools]testing}
+    {[django]latest}
 
 
-[testenv:py27x_dj14x]
+[testenv:py27-dj14]
 basepython = python2.7
 deps =
-    {tools$testing}
-    {django$1.4.x}
+    {[tools]testing}
+    {[django]1.4.x}
 
 
-[testenv:py27x_dj13x]
+[testenv:py27-dj13]
 basepython = python2.7
 deps =
-    {tools$testing}
-    {django$1.3.x}
-
+    {[tools]testing}
+    {[django]1.3.x}
 
 
 ; -- python 2.6.x -------------------------------------------------------------
 
 
-[testenv:py26x_dj]
+[testenv:py26-dj]
 basepython = python2.6
 deps =
-    {tools$testing}
-    {django$latest}
+    {[tools]testing}
+    {[django]latest}
 
 
-[testenv:py26x_dj14x]
+[testenv:py26-dj14]
 basepython = python2.6
 deps =
-    {tools$testing}
-    {django$1.4.x}
+    {[tools]testing}
+    {[django]1.4.x}
 
 
-[testenv:py26x_dj13x]
+[testenv:py26-dj13]
 basepython = python2.6
 deps =
-    {tools$testing}
-    {django$1.3.x}
+    {[tools]testing}
+    {[django]1.3.x}
