--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py27-dj, py27-dj14, py27-dj13,
-    py26-dj, py26-dj14, py26-dj13
+    py27-dj, py27-dj18, py27-dj19, py27-dj10, py27-dj11,
+    py36-dj, py36-dj18, py36-dj19, py36-dj10, py36-dj11
 
 [testenv]
 commands =
@@ -16,8 +16,10 @@ testing =
     https://github.com/dag/attest/tarball/master
 
 [django]
-1.3.x  = Django>=1.3,<1.4
-1.4.x  = Django>=1.4,<1.5
+1.8.x  = Django>=1.8,<1.9
+1.9.x  = Django>=1.9,<1.10
+1.10.x  = Django>=1.10,<1.11
+1.11.x  = Django>=1.11,<2.0
 latest = https://github.com/django/django/tarball/master
 
 
@@ -30,39 +32,62 @@ deps =
     {[django]latest}
 
 
-[testenv:py27-dj14]
+[testenv:py27-dj18]
 basepython = python2.7
 deps =
     {[tools]testing}
-    {[django]1.4.x}
+    {[django]1.8.x}
 
 
-[testenv:py27-dj13]
+[testenv:py27-dj19]
 basepython = python2.7
 deps =
     {[tools]testing}
-    {[django]1.3.x}
+    {[django]1.9.x}
+
+[testenv:py27-dj10]
+basepython = python2.7
+deps =
+    {[tools]testing}
+    {[django]1.10.x}
+
+[testenv:py27-dj11]
+basepython = python2.7
+deps =
+    {[tools]testing}
+    {[django]1.11.x}
+    
+; -- python 3.6.x -------------------------------------------------------------
 
 
-; -- python 2.6.x -------------------------------------------------------------
-
-
-[testenv:py26-dj]
-basepython = python2.6
+[testenv:py36-dj]
+basepython = python3.6
 deps =
     {[tools]testing}
     {[django]latest}
 
 
-[testenv:py26-dj14]
-basepython = python2.6
+[testenv:py36-dj18]
+basepython = python3.6
 deps =
     {[tools]testing}
-    {[django]1.4.x}
+    {[django]1.8.x}
 
 
-[testenv:py26-dj13]
-basepython = python2.6
+[testenv:py36-dj19]
+basepython = python36
 deps =
     {[tools]testing}
-    {[django]1.3.x}
+    {[django]1.9.x}
+
+[testenv:py36-dj10]
+basepython = python36
+deps =
+    {[tools]testing}
+    {[django]1.10.x}
+    
+[testenv:py36-dj11]
+basepython = python36
+deps =
+    {[tools]testing}
+    {[django]1.11.x}
